# quality-cluster

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Makefile  go.work  go.work.sum
.claude/agents/: cli-evolution.md  cluster-architect.md  contract-auditor.md  contract-guardian.md  (+4 more)
.codex/: instructions.md
tools/raccoon-cli/: Cargo.toml  README.md
tools/raccoon-cli/src/: main.rs  process_utils.rs  runtime_diagnostics.rs
tools/raccoon-cli/src/analyzers/: arch_guard.rs  baseline_drift.rs  briefing.rs  contract_usage_map.rs  contracts.rs  coverage_map.rs  doctor.rs  drift_detect.rs  impact_map.rs  mod.rs  recommend.rs  rename_safety.rs  runtime_bindings.rs  snapshot.rs  snapshot_diff.rs  symbol_trace.rs  tdd.rs  topology.rs
tools/raccoon-cli/src/analyzers/contracts/: dataplane.rs  envelope.rs  events.rs  registry.rs
tools/raccoon-cli/src/analyzers/runtime_bindings/: configs.rs  source.rs
tools/raccoon-cli/src/analyzers/topology/: compose.rs  configs.rs  source.rs
tools/raccoon-cli/src/codeintel/: index.rs  mod.rs  parser.rs  types.rs  walker.rs
tools/raccoon-cli/src/error/: mod.rs
tools/raccoon-cli/src/gate/: mod.rs
tools/raccoon-cli/src/lsp/: bridge.rs  client.rs  mod.rs  protocol.rs  types.rs
tools/raccoon-cli/src/models/: mod.rs
tools/raccoon-cli/src/output/: mod.rs
tools/raccoon-cli/src/results_inspect/: mod.rs
tools/raccoon-cli/src/smoke/: api.rs  compose.rs  mod.rs  scenarios.rs  stages.rs
tools/raccoon-cli/src/trace_pack/: collect.rs  mod.rs
tools/raccoon-cli/tests/: cli_integration.rs  validation_matrix.rs
(+351 files in other folders)
