[package]
name = "raccoon-cli"
version = "0.1.0"
edition = "2021"
description = "Engineering quality tooling for quality-service"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
